[tool.poetry]
name = "matsudo-city-library-request-card-generator"
version = "0.1.0"
description = "📚 Generate a book request card image of the Matsudo City library without manual filling out"
authors = ["TAKAHASHI Shuuji <shuuji3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "9.0.1"
PyYAML = "6.0"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
